# Thermometer

./: .gitattributes  CMakeLists.txt  LICENSE  Makefile  README.md  buttons.c  buttons.h  config.h  display.c  display.h  ds18b20.c  ds18b20.h  gpio.h  i2c.h  main.c  onewire.c  onewire.h  onewire_rom_cmd.h  onewire_stm32.c  onewire_stm32.h  rcc_setup.h  rtc.c  run.sh  ssd1306.h  temp_sensor_dispatcher.c  temp_sensor_dispatcher.h  text.c  text.h  text_res.h  thermometer_conf.h  time.c  time_format.c  time_format.h  uart.c  uart.h  utf8.h  utils.h
CMSIS/Device/ST/STM32F1xx/Source/gcc/: startup_stm32f103xb.s
CMSIS/Device/ST/STM32F1xx/Source/gcc/linker/: STM32F103XB_FLASH.ld
src/: display.c  display.h  flash.c  flash.h  flash_settings.c  flash_settings.h  main.c  poll_timer.c  poll_timer.h  power.c  power.h  rtc.c  rtc.h  stm32f1_isr.c  temp_sensor_dispatcher.c  temp_sensor_dispatcher.h  text_res.h  time.c  time.h
src/drivers/: ds18b20.c  ds18b20.h
src/interfaces/: buttons.c  buttons.h  i2c.c  i2c.h  onewire_stm32.c  uart.c  uart.h
src/ui/: text.c  text.h
src/ui/fonts/: arial_black_24.h
src/ui/menu/: menu.c  menu.h
src/ui/mode/: ui_mode.h  ui_mode_dispatcher.c  ui_mode_dispatcher.h
src/ui/screens/: scr_common.c  scr_common.h  scr_construction.c  scr_construction.h  scr_init.c  scr_menu.c  scr_menu.h  scr_set_sleep.c  scr_set_sleep.h  scr_set_time.c  scr_set_time.h  scr_settings.c  scr_settings.h  scr_time.c  scr_time.h  ui_screen.h  ui_screen_temp.c  ui_screen_temp.h
src/util/: gpio.h  rcc_setup.h  utf8.h  utils.h
ui/: scr_common.c  scr_construction.c  scr_init.c  scr_init.h  scr_menu.c  scr_set_time.c  scr_time.c  screen_dispatcher.c  screen_dispatcher.h  ui_mode.h  ui_mode_dispatcher.c  ui_mode_dispatcher.h  ui_scr_common.c  ui_scr_common.h  ui_scr_construction.c  ui_screen.h  ui_screen_temp.c  ui_screen_temp.h
ui/fonts/: bebas_neue_16.h
